--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"bugs": {
 		"url": "https://github.com/danileao/vscode-var-colors/issues"
 	},
+	"icon": "images/icon.png",
 	"engines": {
 		"vscode": "^1.32.0"
 	},
